# mltt-consistency

./: .gitignore  .woodpecker.yaml  CoqMakefile.conf  LICENSE  Makefile  README.md  _CoqProject  common.v  coq-pccomega.opam  count-line.sh  gen_syntax.pl  imports.v  inversion.v  join.v  normalform.v  notes.org  opam.switch  pack.fish  semtyping.v  semtypingopen.v  soundness.v  soundnessopen.v  structural.v  syntactic_soundness.v  syntatic_soundness.v  syntax.sig  syntax.v  toplevel.v  typing.v  unscoped.v
agda/: README.md
beta/: count-beta.sh  count-consistency.sh  count-safety.sh  join.v  normalform.v  semtyping.v  semtypingopen.v  soundness.v  soundnessopen.v  syntactic_soundness.v  syntax.sig  syntax.v  typing.v
eta/: count-eta.sh  imports.v  join.v  normalform.v  semtyping.v  soundness.v  syntax.sig  syntax.v  typing.v
paper/: Makefile  icfp.tex  latexrun  paper.tex  refs.bib  spec.ott  spec.tex
theories/: consistency.v  conv.v  geq.v  imports.v  join.v  normalform.v  par.v  par_consistency.v  per.v  preservation.v  semtyping.v  soundness.v  syntactic_soundness.v  toplevel.v  typing.v  typing_conv.v  typing_prop.v
theories/Autosubst2/: syntax.v
theories/Lattice/: All.v
theories/PCCOmega/: imports.v  join.v  normalform.v  semtyping.v  soundness.v  syntactic_soundness.v  typing.v
writeup/: Makefile
